# ufoc

./: Cargo.toml  Embed.toml  README.md  memory.x  st_nucleo_g4.cfg
.cargo/: config.toml
src/: adc.rs  cordic.rs  dma.rs  foc.rs  gpio.rs  main.rs  main_old.rs  opamp.rs  rcc.rs  tim.rs  tle5012.rs
