[package]
name = "ufoc"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1"
ma734 = "0.1.1"

[dependencies.stm32ral]
version = "0.8.0"
features = ["stm32g431", "rtic"]


